syntax = "proto3";
package vesta.vm;

import "gogoproto/gogo.proto";
import "vesta/vm/params.proto";
import "vesta/vm/contracts.proto";
import "vesta/vm/program.proto";
import "vesta/vm/romdata.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/VestaProtocol/vesta/x/vm/types";

// GenesisState defines the vm module's genesis state.
message GenesisState {
  Params params = 1 [ (gogoproto.nullable) = false ];
  repeated Contracts contractsList = 2 [ (gogoproto.nullable) = false ];
  uint64 contractsCount = 3;
  repeated Program programList = 4 [ (gogoproto.nullable) = false ];
  repeated Romdata romdataList = 5 [ (gogoproto.nullable) = false ];
  // this line is used by starport scaffolding # genesis/proto/state
}
